--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -1,3 +1,6 @@
+# This workflow will do a clean installation of node dependencies, cache/restore them, build the source code and run tests across different versions of node
+# For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-nodejs
+
 name: Node.js CI
 
 on:
@@ -8,11 +11,13 @@ on:
 
 jobs:
   build:
+
     runs-on: ubuntu-latest
 
     strategy:
       matrix:
-        node-version: [18.x, 20.x, 22.x]
+        node-version: [22.15.0]
+        # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
 
     steps:
     - uses: actions/checkout@v4
@@ -20,24 +25,25 @@ jobs:
       uses: actions/setup-node@v4
       with:
         node-version: ${{ matrix.node-version }}
-        cache: 'pnpm'
-    - name: Install dependencies
-      run: pnpm install --frozen-lockfile
-    - name: Run TypeScript type check
-      run: pnpm vue-tsc --noEmit
+        cache: 'npm'
+    - run: npm ci
+    - run: npm install -g pnpm
+    - run: pnpm install
+    - run: pnpm electron:build
+    
+    #Cache File
     - name: Cache Electron build
       uses: actions/cache@v4
       with:
         path: |
-          dist_electron
           node_modules/.cache
         key: ${{ runner.os }}-electron-build-${{ hashFiles('pnpm-lock.yaml') }}
         restore-keys: |
           ${{ runner.os }}-electron-build-
-    - name: Build Electron app
-      run: pnpm electron:build
+
     - name: Upload build artifacts
       uses: actions/upload-artifact@v4
       with:
-        name: electron-build-${{ matrix.node-version }}
-        path: dist_electron/
+        name: electron-build
+        path: dist_electron/*
+
