--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -21,25 +21,10 @@ jobs:
 
     steps:
     - uses: actions/checkout@v4
-    - name: Use Node.js ${{ matrix.node-version }}
+    - name: Pnpm Install
       uses: actions/setup-node@v4
-      with:
-        node-version: ${{ matrix.node-version }}
-        cache: 'npm'
-    - run: npm ci
-    - run: npm install -g pnpm
-    - run: pnpm install
+    - run: pnpm install --frozen-lockfile
     - run: pnpm electron:build
-    
-    #Cache File
-    - name: Cache Electron build
-      uses: actions/cache@v4
-      with:
-        path: |
-          node_modules/.cache
-        key: ${{ runner.os }}-electron-build-${{ hashFiles('pnpm-lock.yaml') }}
-        restore-keys: |
-          ${{ runner.os }}-electron-build-
 
     - name: Upload build artifacts
       uses: actions/upload-artifact@v4
