--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -11,9 +11,7 @@ on:
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
-
     strategy:
       matrix:
         node-version: [22.15.0]
@@ -23,7 +21,8 @@ jobs:
     - uses: actions/checkout@v4
     - name: Pnpm Install
       uses: actions/setup-node@v4
-    - run: pnpm install --frozen-lockfile
+    - run: npm install
+    - run: pnpm install
     - run: pnpm electron:build
 
     - name: Upload build artifacts
