--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -1,7 +1,5 @@
-# This workflow will do a clean installation of node dependencies, cache/restore them, build the source code and run tests across different versions of node
-# For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-nodejs
 
-name: Node.js CI
+name: VoiceVOX Chinese CI
 
 on:
   push:
@@ -11,23 +9,37 @@ on:
 
 jobs:
   build:
-    runs-on: ubuntu-latest
+    runs-on: windows-latest
+
     strategy:
       matrix:
-        node-version: [22.15.0]
-        # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
+        node-version: [18.x, 20.x, 22.x]
 
     steps:
     - uses: actions/checkout@v4
-    - name: Pnpm Install
+    - name: Use Node.js ${{ matrix.node-version }}
       uses: actions/setup-node@v4
-    - run: npm install
-    - run: pnpm install
-    - run: pnpm electron:build
-
+      with:
+        node-version: ${{ matrix.node-version }}
+        cache: 'pnpm'
+    - name: Install dependencies
+      run: pnpm install --frozen-lockfile
+    - name: Run TypeScript type check
+      run: pnpm vue-tsc --noEmit
+    - name: Cache Electron build
+      uses: actions/cache@v4
+      with:
+        path: |
+          dist_electron
+          node_modules/.cache
+        key: ${{ runner.os }}-electron-build-${{ hashFiles('pnpm-lock.yaml') }}
+        restore-keys: |
+          ${{ runner.os }}-electron-build-
+    - name: Build Electron app
+      run: pnpm electron:build
     - name: Upload build artifacts
       uses: actions/upload-artifact@v4
       with:
-        name: electron-build
-        path: dist_electron/*
+        name: electron-build-${{ matrix.node-version }}
+        path: dist_electron/
 
