--- a/.github/workflows/npm-publish-github-packages.yml
+++ b/.github/workflows/npm-publish-github-packages.yml
@@ -17,21 +17,12 @@ jobs:
         id: create_release
         uses: actions/create-release@v1
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}  # 换成 secrets.MY_GITHUB_TOKEN 如果用 PAT
         with:
-          tag_name: ${{ github.ref }}
+          tag_name: ${{ github.ref_name }}  # 用 tag 名，比如 v23.1.3
           release_name: Release ${{ github.ref_name }}
           draft: false
           prerelease: false
-      - name: Upload latest.yml
-        uses: actions/upload-release-asset@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: ./dist_electron/nsis-web/latest.yml
-          asset_name: latest.yml
-          asset_content_type: application/x-yaml
       - name: Upload .exe
         uses: actions/upload-release-asset@v1
         env:
